src/test/deca/context/invalid/added/print_bool.deca
// Description:
//    affiche un booléen
//
// Resultats:
//    True;
//
// Historique:
//    cree le 04/01/2024

{
  println(true);
}
